# yahtzee_game

./: CMakeLists.txt  README.md  calc_expected.c  calc_expected.h  calc_score.c  cpu.c  cpu.h  cpu_debug.c  cpu_op_data.c  cpu_op_data.h  cpu_op_dice.c  cpu_op_dice.h  cpu_queue.c  cpu_queue.h  cpu_sample.c  create.c  create.h  debag_mode.c  debug_mode.h  dice.c  dice_cursor_flag.c  dice_list.c  error.c  error.h  game_cursor.c  game_cursor.h  game_score.c  game_score.h  game_screen.c  game_value.h  help.c  help.h  makefile  message.c  message.h  mode_keep_dice.c  mode_reroll_select.c  mode_reroll_select.h  mode_roll_dice.c  mode_roll_dice.h  (+34 more)
data/: prot.txt  rule.txt
docs/: README.md
include/: calc_expected.h  calc_score.h  cpu.h  cpu_op_data.h  debag_mode.h  dice.h  dice_cursor_flag.h  dice_list.h  dice_struct.h  game_cursor.h  game_score.h  game_screen.h  mode_keep_dice.h  name.h  operation_score.h  queue.h  time_sleep.h  yahtzee_game.h
src/: calc_expected.c  cpu.c  cpu_op_data.c  cpu_op_dice.c  create.c  debug_mode.c  dice_list.c  dice_struct.c  error.c  game_score.c  game_value.c  help.c  mode_reroll_select.c  name.c  op_score_list.c  operation_dice.c  operation_help.c  operation_mode.c  operation_score.c  score.c  screen_place.c  time_sleep.c  title.c  window_struct.c  yahtzee.c
